<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Répertoire</string>
    <string name="second_page">Seconde page !</string>
    <string name="hello_world">Hello world!</string>
    <string name="ajout_num">Ajouter un numéro</string>
    <string name="Page_d_accueil">Page d\'accueil</string>
    <string name="Nom">Nom</string>
    <string name="Prenom">Prénom</string>
    <string name="Date">Date de naissance</string>
    <string name="Ville">Ville de naissance</string>
    <string name="Phone">Telephone</string>
    <string name="OK">OK</string>
    <string name="action_search">Barre de menu!</string>
 	<string name="buttonraz">Remise à zéro</string>
 	<string name="wikipedia">Wikipedia planete</string>
 	
    
    
    
    

</resources>
