<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tp1.MainActivity" >

    	
      
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="20dp"
        android:text="@string/Page_d_accueil" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginBottom="36dp"
        android:text="@string/Nom" />

       <Button
           android:id="@+id/button1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/editText4"
           android:layout_alignParentBottom="true"
           android:text="OK"
           android:onClick="valider"
           
            />

       <EditText
           android:id="@+id/editText2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/textView4"
           android:layout_alignLeft="@+id/editText1"
           android:layout_marginBottom="34dp"
           android:ems="10"
           android:inputType="textPersonName" />

       <TextView
           android:id="@+id/textView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/editText2"
           android:layout_below="@+id/editText1"
           android:layout_marginTop="115dp"
           android:text="@string/Date" />

       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_above="@+id/editText2"
           android:layout_alignLeft="@+id/textView5"
           android:text="@string/Prenom" />

       <EditText
           android:id="@+id/editText3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView4"
           android:layout_below="@+id/editText2"
           android:ems="10"
           android:inputType="date" />

       <TextView
           android:id="@+id/textView5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignRight="@+id/textView4"
           android:layout_below="@+id/editText3"
           android:text="@string/Ville" />

       <EditText
           android:id="@+id/editText4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/editText3"
           android:layout_below="@+id/textView5"
           android:ems="10" />

      

</RelativeLayout>